[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes2/Main.gd" type="Script" id=1]
[ext_resource path="res://spoilers/images2/main-background.png" type="Texture" id=2]
[ext_resource path="res://spoilers/images2/decor-picture-sign-o-0001.png" type="Texture" id=3]
[ext_resource path="res://spoilers/images2/decor-picture-sign-o-0002.png" type="Texture" id=4]
[ext_resource path="res://spoilers/images2/decor-picture-sign-o-0003.png" type="Texture" id=5]
[ext_resource path="res://spoilers/images2/decor-picture-sign-o-0004.png" type="Texture" id=6]
[ext_resource path="res://spoilers/images2/decor-picture-sign-x-0001.png" type="Texture" id=7]
[ext_resource path="res://spoilers/images2/decor-picture-sign-x-0002.png" type="Texture" id=8]
[ext_resource path="res://spoilers/images2/decor-picture-sign-x-0003.png" type="Texture" id=9]
[ext_resource path="res://spoilers/fonts/cmunvi.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes2/turn_pointers/TurnPointer.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes2/_global/Notify.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes2/_global/Button300x100.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes2/menu/Menu.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
extra_spacing_top = 20
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="SceneDecor" type="Node2D" parent="." index="0"]

editor/display_folded = true

[node name="SceneBackground" type="TextureRect" parent="SceneDecor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="decor-picture-sign-o-0001" type="Sprite" parent="SceneDecor" index="1"]

position = Vector2( 183, 293 )
texture = ExtResource( 3 )

[node name="decor-picture-sign-o-0002" type="Sprite" parent="SceneDecor" index="2"]

position = Vector2( 158, 228 )
texture = ExtResource( 4 )

[node name="decor-picture-sign-o-0003" type="Sprite" parent="SceneDecor" index="3"]

position = Vector2( 158, 140 )
texture = ExtResource( 5 )

[node name="decor-picture-sign-o-0004" type="Sprite" parent="SceneDecor" index="4"]

position = Vector2( 74, 164 )
texture = ExtResource( 6 )

[node name="decor-picture-sign-x-0001" type="Sprite" parent="SceneDecor" index="5"]

position = Vector2( 966, 226 )
texture = ExtResource( 7 )

[node name="decor-picture-sign-x-0002" type="Sprite" parent="SceneDecor" index="6"]

position = Vector2( 964, 120 )
texture = ExtResource( 8 )

[node name="decor-picture-sign-x-0003" type="Sprite" parent="SceneDecor" index="7"]

position = Vector2( 858, 152 )
texture = ExtResource( 9 )

[node name="PlayerCircleAvatarAnchor" type="Node2D" parent="." index="1"]

position = Vector2( 106, 300 )

[node name="PlayerCrossAvatarAnchor" type="Node2D" parent="." index="2"]

position = Vector2( 918, 300 )
_sections_unfolded = [ "Transform" ]

[node name="_place_for_playing_field" type="Node" parent="." index="3"]

[node name="HumanInputBlocker" type="Control" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PlayersStats" type="Node2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 0, 450 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerOStats" type="Label" parent="PlayersStats" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 212, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KEY_STATS"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="PlayerXStats" type="Label" parent="PlayersStats" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 812.0
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 212, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KEY_STATS"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnPointers" type="Node2D" parent="." index="6"]

editor/display_folded = true

[node name="PlayerOPointer" parent="TurnPointers" index="0" instance=ExtResource( 11 )]

[node name="PlayerXPointer" parent="TurnPointers" index="1" instance=ExtResource( 11 )]

position = Vector2( 812, 0 )

[node name="Notifies" type="Node2D" parent="." index="7"]

editor/display_folded = true

[node name="PlayerOWins" parent="Notifies" index="0" instance=ExtResource( 12 )]

visible = false
text = "NOTIFY_O_WINS"

[node name="PlayerXWins" parent="Notifies" index="1" instance=ExtResource( 12 )]

visible = false
text = "NOTIFY_X_WINS"

[node name="Tie" parent="Notifies" index="2" instance=ExtResource( 12 )]

visible = false
text = "NOTIFY_TIE"

[node name="Buttons" type="HBoxContainer" parent="Notifies" index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 300.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 100
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="PlayAgainButton" parent="Notifies/Buttons" index="0" instance=ExtResource( 13 )]

editor/display_folded = true
margin_left = 162.0
margin_right = 462.0
margin_bottom = 100.0
rect_clip_content = true

[node name="Label" type="Label" parent="Notifies/Buttons/PlayAgainButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NTBTN_PLAY_AGAIN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackToMenuButton" parent="Notifies/Buttons" index="1" instance=ExtResource( 13 )]

margin_left = 562.0
margin_right = 862.0
margin_bottom = 100.0
rect_clip_content = true

[node name="Label" type="Label" parent="Notifies/Buttons/BackToMenuButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NTBTN_BACK_TO_MENU"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="WouldYouLikeToDo" parent="Notifies" index="4" instance=ExtResource( 12 )]

editor/display_folded = true
visible = false
text = "NOTIFY_WHAT_WOULD_YOU_LIKE"

[node name="Buttons" type="HBoxContainer" parent="Notifies/WouldYouLikeToDo" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 400.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 1

[node name="PlayAgainButton" parent="Notifies/WouldYouLikeToDo/Buttons" index="0" instance=ExtResource( 13 )]

editor/display_folded = true
margin_left = 37.0
margin_right = 337.0
margin_bottom = 100.0
rect_clip_content = true

[node name="Label" type="Label" parent="Notifies/WouldYouLikeToDo/Buttons/PlayAgainButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NTBTN_PLAY_AGAIN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackToMenuButton" parent="Notifies/WouldYouLikeToDo/Buttons" index="1" instance=ExtResource( 13 )]

editor/display_folded = true
margin_left = 362.0
margin_right = 662.0
margin_bottom = 100.0
rect_clip_content = true

[node name="Label" type="Label" parent="Notifies/WouldYouLikeToDo/Buttons/BackToMenuButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NTBTN_BACK_TO_MENU"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resume" parent="Notifies/WouldYouLikeToDo/Buttons" index="2" instance=ExtResource( 13 )]

editor/display_folded = true
margin_left = 687.0
margin_right = 987.0
margin_bottom = 100.0
rect_clip_content = true

[node name="Label" type="Label" parent="Notifies/WouldYouLikeToDo/Buttons/Resume" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NTBTN_RESUME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu" parent="." index="8" instance=ExtResource( 14 )]

visible = false
margin_left = 212.0
margin_right = 812.0

[node name="_place_for_instruction" type="Node" parent="." index="9"]

[connection signal="pressed" from="Notifies/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]

[connection signal="pressed" from="Notifies/Buttons/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]

[connection signal="pressed" from="Notifies/WouldYouLikeToDo/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]

[connection signal="pressed" from="Notifies/WouldYouLikeToDo/Buttons/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]

[connection signal="pressed" from="Notifies/WouldYouLikeToDo/Buttons/Resume" to="." method="_on_Resume_pressed"]

[connection signal="difficulty_changed" from="Menu" to="." method="_on_Menu_difficulty_changed"]

[connection signal="instruction_requested" from="Menu" to="." method="_on_Menu_instruction_requested"]

[connection signal="language_changed" from="Menu" to="." method="_on_Menu_language_changed"]

[connection signal="player_type_changed" from="Menu" to="." method="_on_Menu_player_type_changed"]

[connection signal="playing_requested" from="Menu" to="." method="_on_Menu_playing_requested"]

[connection signal="quitting_requested" from="Menu" to="." method="_on_Menu_quitting_requested"]


